<resources>
    <string name="app_name">KotlinProject</string>
    <string name="un_login_text">登录/注册</string>

    <!--update更新模块-->
    <string name="update_title">快下载更新体验一下吧</string>
    <string name="update_new_version">您有新版本</string>
    <string name="update_install">安装</string>
    <string name="update_download_failed">下载失败</string>
    <string name="update_download_failed_msg">下载失败，请检查网络连接或 SD卡存储空间</string>
    <string name="update_download_start">开始下载</string>
    <string name="update_download_processing">正在下载</string>
    <string name="update_download_finish">下载完成</string>
    <string name="update_download_tip">提示</string>
    <string name="no_new_version_title">已是最新版</string>
    <string name="no_new_version_msg">您当前已经是最新版本，无需更新。</string>

    <!--ShareSDK分享模块-->
    <string name="share_weixin">微信</string>
    <string name="share_weixin_moment">朋友圈</string>
    <string name="share_qq">QQ</string>
    <string name="share_qzone">QQ空间</string>
    <string name="share_cancel">取消</string>
    <string name="share_download">下载</string>

</resources>
